updates so far on the wordpress added

--- a/css/main.css
+++ b/css/main.css
@@ -280,6 +280,7 @@
   padding: 20px;
   text-transform: uppercase;
   font-weight: 300;
+  background: transparent;
 }
 
 
@@ -287,7 +288,7 @@
 #header .navbar-inverse .navbar-nav  li.active > a:focus, 
 #header .navbar-nav.navbar-right li > a:hover,
 .navbar-inverse .navbar-nav > .open > a {
-  background-color: inherit;
+  background-color: transparent;
   border: 0;
   color: #00aeef;
 }
